--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,8 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   height: 12rem;
+  width: 16rem;
+  object-fit: cover;
 }
 .clogo {
 	width: 6.5rem;
